<resources>
    <string name="app_name">OurCountry</string>
    <string name="kakao_app_key">9a2b72ebb8d428913ecc87ef9db21283</string>
    <string name="admob_banner_ads_key" translatable="false">ca-app-pub-1007967075190551/6494229118</string>
    <string name="app_kor_name">우리시골</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="account_confirm">
        <item>주민등록번호 </item>
        <item>사업자등록번호 </item>

    </string-array>
    <!-- Bank -->
    <string-array name="array_bank">
        <item>농협 011</item>
        <item>신한 088</item>
        <item>IBK기업 003</item>
        <item>하나은행 081</item>
        <item>우리 020</item>
        <item>국민 004</item>
        <item>SC제일 023</item>
        <item>부산 032</item>
        <item>광주 034</item>
        <item>새마을 045</item>
        <item>대구 031</item>
        <item>경남 039</item>
        <item>전북 037</item>
        <item>제주 035</item>
        <item>산업 002</item>
        <item>카카오뱅크 090</item>
        <item>신협 048</item>
        <item>수협 007</item>
        <item>씨티 027</item>
        <item>케이뱅크 089</item>
        <item>도이치 055</item>
        <item>BOA 060</item>
        <item>우체국 071</item>
        <item>HSBC 054</item>
        <item>JP모간 057</item>
        <item>저축은행 050</item>
    </string-array>

    <!-- Menu -->
    <string name="menu__home">Home</string>
    <string name="menu__all_cities">모든 도시</string>
    <string name="menu__popular_cities">인기 도시</string>
    <string name="menu__recommended_cities">추천 도시</string>
    <string name="menu__profile">프로필</string>
    <string name="menu__like">좋아요</string>
    <string name="menu__favourite_items">내가찜한상품</string>
    <string name="menu__transaction">트랜잭션</string>
    <string name="menu__user_history">사용자 기록</string>
    <string name="menu__logout">로그아웃</string>
    <string name="menu__about_app">소개</string>
    <string name="menu__contact_us">제안/문의</string>
    <string name="menu__notification_setting">알림 설정</string>
    <string name="menu__language">언어</string>
    <string name="menu__setting">설정</string>
    <string name="menu__user">내정보</string>
    <string name="menu__interest">카테고리</string>
    <string name="menu__app_setting">앱</string>
    <string name="menu__user_info">사용자 정보</string>
    <string name="menu__save">저장</string>
    <string name="menu__search">검색</string>
    <string name="menu__side_bar_menu">더보기</string>
    <string name="menu__filter">필터</string>
    <string name="menu__latest_item">최신 상품</string>
    <string name="menu__discount">프로모션 아이템</string>
    <string name="menu__category">카테고리</string>
    <string name="menu__featured_item">추천상품</string>
    <string name="menu__subcategory">하위 카테고리</string>
    <string name="menu__trending_item">인기상품</string>
    <string name="menu__trending_category">트렌드 카테고리</string>
    <string name="menu__home_category_view_All_zg">전체보기</string>
    <string name="menu__home_category_view_All_un">전체보기</string>
    <string name="menu__home_category_textView">카테고리</string>
    <string name="menu__collections">컬렉션</string>
    <string name="menu__map_filter_apply">적용</string>
    <string name="menu__map_filter_reset">재설정</string>
    <string name="menu__home_discount_view_all">할인상품 전체보기</string>
    <string name="menu__rate">이 앱을 평가 해주세요</string>
    <string name="menu__message">메시지</string>
    <string name="menu__chat">채팅</string>
    <string name="menu__report_item">신고 상품</string>
    <string name="menu__share">공유</string>
    <string name="menu__privacy_policy">이용약관 및 개인정보보호정책</string>

</resources>
